--- a/HTML Lists/index.html
+++ b/HTML Lists/index.html
@@ -3,7 +3,9 @@
   <head>
     <meta charset="utf-8">
     <title>Things I've Learned</title>
+
   </head>
+
   <body>
     <h1>Things I've Learned</h1>
 
@@ -16,23 +18,23 @@
     </ol>
 
     <h2>HTML</h2>
+
     <ul>
       <li>Stands for Hyper Text Markup Language</li>
-      <li>
-        Lots of tags
-        <ul>
+      <li>Lots of tags
+    <ul>
           <li>Boilerplate</li>
           <ol>
             <li>Doctype</li>
             <li>HTML</li>
-            <li>
-              Head
+            <li>Head
               <ol>
                 <li>Title</li>
               </ol>
-              <li>Body</li>
+            <li>Body</li>
             </li>
           </ol>
+
           <li>Headings</li>
           <li>Paragraphs</li>
           <li><em>em</em></li>
@@ -40,5 +42,6 @@
         </ul>
       </li>
     </ul>
+
   </body>
 </html>
